# epmc_cpp

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build.md
cmake/: epmc_serialConfig.cmake.in
debian/: changelog  control
debian/source/: options
examples/: comm_speed_test.cpp  motor_control.cpp
include/: epmc.hpp  epmc_i2c.hpp  epmc_serial.hpp
include/epmc_serial/: epmc_serial.hpp
